--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Marvel.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -25,7 +25,7 @@
       src="https://kit.fontawesome.com/92ae6f1716.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Marvel App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
